# frontier-notes

./: .gitignore  README.md
code/: Cargo.toml
code/mhd-1d/: Cargo.toml  README.md  advection.py  euler.py  mhd.py  plot_brio_wu.py  plot_sod.py  riemann_euler.py  test_advection.py  test_euler.py  test_mhd.py
code/mhd-1d/examples/: advection_demo.rs  plot_brio_wu.rs  plot_sod.rs
code/mhd-1d/src/: advection.rs  euler.rs  lib.rs  mhd.rs  riemann_euler.rs
code/mhd-1d/tests/: advection.rs  euler.rs  mhd.rs
code/mhd-ml-bridge/: Cargo.toml  README.md  data.py  requirements.txt  surrogate.py
code/mhd-ml-bridge/examples/: sweep.rs  train.rs  train_operator.rs
code/mhd-ml-bridge/src/: data.rs  lib.rs  operator.rs  surrogate.rs  sweep.rs
code/rl-control-toy/: Cargo.toml
code/rl-control-toy/examples/: pid_demo.rs
code/rl-control-toy/src/: env.rs  lib.rs  pid.rs
code/rl-control-toy/tests/: env.rs
decisions/: 001-specialization.md
log/: 2026-04-first-month.md  2026-05-second-month.md
notes/ideas/: README.md
notes/plasma/: 002-mlp-failure-modes.md  003-deeponet-vs-wide-mlp.md  research-questions.md
papers/summaries/: degrave-2022-tokamak-rl.md
