[workspace]
resolver = "2"
members = ["mhd-1d", "mhd-ml-bridge"]

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
ndarray = "0.16"
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "ttf", "line_series", "point_series"] }
anyhow = "1"
candle-core = "0.10"
candle-nn = "0.10"
rand = "0.8"
rand_distr = "0.4"
