[package]
name = "rl-control-toy"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Pendulum-on-cart + PID/LQR baseline — setup for the Degrave-style RL vs. classical comparison"

[lib]
path = "src/lib.rs"

[dependencies]
ndarray = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
plotters = { workspace = true }

[[example]]
name = "pid_demo"
path = "examples/pid_demo.rs"
